--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head >
-    <base herf="/admin" target="_blank">
+    <!-- <base herf="/admin" target="_blank"> -->
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <!-- CSS only -->
@@ -13,8 +13,6 @@
       name="description"
       content="Web site created using create-react-app"
     />
-
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   
     <title>EPICURE - admin panel</title>
   </head>
